@@ -24,11 +24,18 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>plugin</artifactId>
+    <version>2.13</version>
+    <relativePath/>
+  </parent>
+
   <groupId>org.jenkinsci.plugins</groupId>
-  <artifactId>pipeline-model-parent</artifactId>
+  <artifactId>pipeline-model-api</artifactId>
   <version>0.5-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>Pipeline: Model Parent POM</name>
+  <packaging>hpi</packaging>
+  <name>Pipeline: Model API</name>
   <description>An opinionated, declarative Pipeline</description>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/Pipeline+Model+Definition+Plugin</url>
 
@@ -53,38 +60,79 @@
     <url>https://github.com/jenkinsci/pipeline-config-plugin</url>
     <tag>HEAD</tag>
   </scm>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.2.5</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   
-
-  <modules>
-    <module>pipeline-model-api</module>
-    <module>pipeline-model-definition</module>
-  </modules>
-
-  <!-- project is just for aggregating, never as a parent, we force skip to ensure we never deploy or install it -->
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-install-plugin</artifactId>
-        <version>2.5.2</version>
+        <groupId>org.codehaus.gmaven</groupId>
+        <artifactId>gmaven-plugin</artifactId>
+        <version>1.4</version>
         <configuration>
-          <skip>true</skip>
+          <providerSelection>1.8</providerSelection>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generateStubs</goal>
+              <goal>compile</goal>
+              <goal>generateTestStubs</goal>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
+        <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <skip>true</skip>
+          <systemProperties>
+            <property>
+              <name>hudson.udp</name>
+              <value>33849</value>
+            </property>
+          </systemProperties>
+          <argLine>-Xmx4g -XX:MaxPermSize=256m</argLine>
+          <reuseForks>true</reuseForks>
+          <forkCount>0.5C</forkCount>
+          <!-- TODO: I hate the retrying tests but given the nondeterministic whackiness of JENKINS-37101... -->
+          <rerunFailingTestsCount>3</rerunFailingTestsCount>
         </configuration>
       </plugin>
-      <plugin>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
-        <configuration>
-          <!-- keep the tag names aligned with previous releases -->
-          <tagNameFormat>pipeline-model-definition-@{project.version}</tagNameFormat>
-        </configuration>
-      </plugin>
+
     </plugins>
   </build>
+
+  <properties>
+    <jenkins.version>2.7.1</jenkins.version>
+    <java.level>7</java.level>
+    <groovy.version>2.4.7</groovy.version>
+  </properties>
+  
+  <repositories>
+    <repository>
+      <id>repo.jenkins-ci.org</id>
+      <url>http://repo.jenkins-ci.org/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>repo.jenkins-ci.org</id>
+      <url>http://repo.jenkins-ci.org/public/</url>
+    </pluginRepository>
+  </pluginRepositories>
+  
 </project>
